--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@ I started developing games since I was 16, I have acquired the following skills 
                     <li class="list-group-item">Photon (PUN2)</li>
                   </ul>
 I have completed many client projects some of which are <a href="/projects.html">here</a>
+My games and assets :
+<ul style="width: 300px;" class="list-group">
+    <li class="list-group-item"><a href="https://assetstore.unity.com/publishers/35959">Unity assets store</a></li>
+    <li class="list-group-item"><a href="https://sandsarts.itch.io/">Games</a></li>
+   
+  </ul>
+
 I even create tutorials on game development ,you can check them out here :
 
 <ul style="width: 300px;" class="list-group">
