--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
      
       </nav>
-   
+   <center>
          <div style="padding: 20px;color:white;font-family: Titillium;">
             <pre>Hi game developers, I am Shashank the founder of SandS Arts.
 I started developing games since I was 16, I have acquired the following skills :
@@ -68,6 +68,7 @@ I even create tutorials on game development ,you can check them out here :
   </ul>
             </pre>
          </div>
+       </center>
      <br>
 </body>
 </html>
