--- a/contact.html
+++ b/contact.html
@@ -7,74 +7,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</head>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color:white; font-family: Titillium;" >
-    <div class="container-fluid" >
-    <img width="100px" src="SandS Arts Logo.png" alt=""></img>  
+</head>     <header class="text-gray-400 bg-gray-900 body-font">
+  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+    <nav class="flex lg:w-1/5 flex-wrap items-center text-base md:ml-auto">
+      <a href="/index.html" class="mr-5 hover:text-white">Home</a>
+      <a href="/projects.html" class="mr-5 hover:text-white">Projects</a>
+      <a href="/contact.html" class="mr-5 hover:text-white">Contact</a>
+   
+    </nav>
+    <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-white lg:items-center lg:justify-center mb-4 md:mb-0">
+      <img width="100px" src="SandS Arts Logo.png" alt=""></img>  
 
-        <a class="navbar-brand" href="#">SandS Arts</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-        <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="/projects.html">Projects</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="/contact.html">Contact</a>
-        </li>
-        </ul>
-
-
-      </div>
-    </div>
- 
-  </nav>
- 
-  <body style="background-color: #DB375A;">
-      <center>
-        <form target="hiddenFrame" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSdQ4fPcO5X9oyQIDzNLXKu0x4_qEo0oJUvdYI1pjERX4Sn1pw/formResponse">
-          <input name="entry.1053137338" type="text" placeholder="Enter your name"><br>
-          <input name="entry.703742853" type="email" placeholder="Enter your email"><br>
-          <textarea name="entry.245846961" type="Enter your message" placeholder="Enter your message"></textarea><br>
-          <label id="sub" hidden>Submitted, will reply in few hours</label><br>
-          <button id="submit" type="submit" ><b>Submit</b></button>
-      </form>
-
-      </center>
-
-      <iframe name="hiddenFrame" width="0" height="0" border="0" style="display: none;"></iframe>
-</body>
-<style>
-  input,textarea
-  {padding: 10px;margin: 30px; width: 50%;}
-  textarea
-  {height: 25vh; min-width: 400px;}
+        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+      </svg>
+      <span class="ml-3 text-xl xl:block lg:hidden">SandS Arts</span>
+    </a>
   
-  form
-  {padding: 15px;}
-  button
-  {
-    color:red;
-    background-color: gold;
-    min-width: 100px;
-    border-radius: 20px;
-    min-width: 400px;
-    font-weight: 700;
-    border-style: hidden;
-  }
-  label
-  {
-    color: gold;
-    font-weight: 700;
-  }
+  </div>
+</header>
+
  
-</style>
+  <body>
+      <iframe name="hiddenFrame" width="0" height="0" border="0" style="display: none;"></iframe>
+      <section class="text-gray-400 bg-gray-900 body-font relative">
+        <div class="container px-5 py-24 mx-auto">
+          <div class="flex flex-col text-center w-full mb-12">
+            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Get in touch</h1>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Will usually reply in a day</p>
+          </div>
+          <div class="lg:w-1/2 md:w-2/3 mx-auto">
+            <div class="flex flex-wrap -m-2">
+            <div class="p-2 w-1/2">
+                <form target="hiddenFrame" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSdQ4fPcO5X9oyQIDzNLXKu0x4_qEo0oJUvdYI1pjERX4Sn1pw/formResponse">
+                <div class="relative">
+                  <label for="name" class="leading-7 text-sm text-gray-400">Name</label>
+                  <input type="text" id="name" name="entry.1053137338" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-red-500 focus:bg-gray-900 focus:ring-2 focus:ring-red-900 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
+              </div>
+              <div class="p-2 w-1/2">
+                <div class="relative">
+                  <label for="email" class="leading-7 text-sm text-gray-400">Email</label>
+                  <input type="email" id="email" name="entry.703742853" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-red-500 focus:bg-gray-900 focus:ring-2 focus:ring-red-900 text-base outline-none text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
+              </div>
+              <div class="p-2 w-full">
+                <div class="relative">
+                  <label for="message" class="leading-7 text-sm text-gray-400">Message</label>
+                  <textarea id="message" name="entry.245846961" class="w-full bg-gray-800 bg-opacity-40 rounded border border-gray-700 focus:border-red-500 focus:bg-gray-900 focus:ring-2 focus:ring-red-900 h-32 text-base outline-none text-gray-100 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                </div>
+              </div>
+              <div class="text-center p-2 w-full">
+                <label id="sub" class="p-3" hidden>Submitted</label><br>
+                <button id="submit" class="flex mx-auto text-white bg-red-500 border-0 py-2 px-8 focus:outline-none hover:bg-red-600 rounded text-lg">Submit</button>
+              </div>
+              <div class="p-2 w-full pt-8 mt-8 border-t border-gray-800 text-center">
+                <a class="text-red-400">sandsarts.developer@gmail.com</a>
+               
+            </div>
+            </div>
+            </form>
+          </div>
+        </div>
+      </section>
+
+</body>
+
 <script>
   document.getElementById("submit").addEventListener("click",submit);
   function submit()
