--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
               <div class="flex flex-wrap -mx-4 -mb-10 text-center">
                 <div class="sm:w-1/2 mb-10 px-4">
                   <div class="rounded-lg h-64 overflow-hidden">
-                    <iframe class="object-cover object-center h-full w-full"  src="https://www.youtube.com/embed/j7mnfb3ttdg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe style="width:80%;height:30%" class="object-cover object-center h-full w-full"  src="https://www.youtube.com/embed/j7mnfb3ttdg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                   <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">A game like Hearthstone (Developed for Enver Studios)</h2>
                 
