--- a/projects.html
+++ b/projects.html
@@ -53,6 +53,21 @@
               </div>
             </div>
           </section>
+           
+        <section class="text-gray-400 bg-gray-900 body-font">
+            <div class="container px-5 py-24 mx-auto">
+              <div class="flex flex-wrap -mx-4 -mb-10 text-center">
+                <div class="sm:w-1/2 mb-10 px-4">
+                  <div class="rounded-lg h-64 overflow-hidden">
+                    <iframe class="object-cover object-center h-full w-full"  src="https://youtu.be/wk8bmQOM6Zs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
+                  <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">A unique FPS shooter</h2>
+                
+                </div>
+                </div>
+              </div>
+            </div>
+          </section>
 
           <section class="text-gray-400 bg-gray-900 body-font">
             <div class="container px-5 py-24 mx-auto">
