--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,8 @@
             
             </div>
           </header>
+
+  <a class="title-font text-2xl font-medium text-white mt-6 mb-3" href="https://sandsarts.itch.io/">My games - https://sandsarts.itch.io/</a>
 <section class="text-gray-400 bg-gray-900 body-font">
             <div class="container px-5 py-24 mx-auto">
               <div class="flex flex-wrap -mx-4 -mb-10 text-center">
@@ -167,6 +169,6 @@
             </div>
           </section>
 
-          <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3"> and more ...</h2>
+          <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">         and more ...</h2>
 </body>
 </html>
