--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="text-center mb-20">
             <h1 class="sm:text-3xl text-2xl font-medium text-center title-font text-white mb-4">
               Hi game developers, I am Shashank the founder of SandS Arts.<br>
-              I started developing games since I was 16, I have acquired the following skills :</h1>
+              I started developing games since I was 16 (now 21) , I have acquired the following skills :</h1>
           </div>
           <div class="flex flex-wrap lg:w-4/5 sm:mx-auto sm:mb-2 -mx-2">
             <div class="p-2 sm:w-1/2 w-full">
