--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,10 @@
   
 <section class="text-gray-400 bg-gray-900 body-font">
             <div class="container px-5 py-24 mx-auto">
-                <center><a style="font-size:27px;" class="link-warning" href="https://collsoapp.000webhostapp.com/">Colp (A web application like linkedin)</a></center>
+             
                   <center><a style="font-size:27px;" class="link-warning" href="https://sandsarts.itch.io/">My games - https://sandsarts.itch.io/</a></center>
+                   <center><a style="font-size:27px;" class="link-warning" href="https://collsoapp.000webhostapp.com/">Colp (A web application like linkedin)</a></center>
+                   <center><a style="font-size:27px;" class="link-warning" href="https://sandsarts.itch.io/knif">KNIF - A 2D OpenGL game</a></center>
               <div class="flex flex-wrap -mx-4 -mb-10 text-center">
                 <div class="sm:w-1/2 mb-10 px-4">
                   <div class="rounded-lg h-64 overflow-hidden">
